--- a/major3rds.html
+++ b/major3rds.html
@@ -24,24 +24,29 @@
     <script src="js/play.js"></script>
     <script src="js/helper.js"></script>
     <script src="js/audiosynth.js"></script>
+    <script src="js/nav.js"></script>
+
 		<title>Brian Gaudino: Developer</title>
 	</head>
 	<body>
-        <nav class="navbar navbar-light">
-            <h1>Brian Gaudino</h1>
-            <ul class="nav justify-content-center">
-                <li class="nav-link">
-                    <a class="nav-link" href="music.html">Musician</a>
-                </li>
-                <li class="nav-link">
-                    <a class="nav-link" href="education.html">Educator</a>
-                </li>
-                <li class="nav-link">
-                    <a class="nav-link" aria-current="page" href="scale.html">Developer</a>
-                </li>
-            </ul>
+        <nav class="nav navbar" id="header">
+            <nav class="navbar navbar-light">
+                <h1 id="title">Brian Gaudino</h1>
+                <ul class="nav justify-content-center">
+                    <li class="nav-link">
+                        <a id="active-link" class="nav-link" href="music.html">Musician</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-link" href="education.html">Educator</a>
+                    </li>
+                    <li class="nav-link">
+                        <a class="nav-link" aria-current="page" href="scale.html">Developer</a>
+                    </li>
+                </ul>     
+            </nav>
         </nav>
-        <div class="flex">
+        <nav class="hidden" id="mobileHeader"><h1>Brian Gaudino</h1></nav>
+        <div id="tabs">
             <ul class="nav nav-tabs">
                 <li class="nav-item"><a class="nav-link" href="music.html">Classical</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Jazz</a></li>
@@ -50,6 +55,7 @@
                 <li class="nav-item"><a class="nav-link" href="">Scores</a></li>
             </ul>
         </div>
+        <div id="mobileTabs"></div>
         <div class="article">
                   <h1>Why Major Thirds Tuning?</h1>
     </header>
