added classical videos

--- a/music.html
+++ b/music.html
@@ -19,7 +19,9 @@
 
         <title>Brian Gaudino: Developer</title>
 	</head>
-	<body>
+	<>
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v9.0" nonce="VLqW7NnZ"></script>
         <nav class="nav navbar" id="header">
             <nav class="navbar navbar-light">
                 <h1 id="title">Brian Gaudino</h1>
@@ -47,10 +49,34 @@
             </ul>
         </div>
         <div id="mobileTabs"></div>
-        <div class="content">
-            <h1>TODO: for now enjoy these video!</h1>
+        <div class="article">
+            <h2>Kiesel Solo Contest 2020: 5th Place Winner!</h2>
+            <p>My unorthodox entry into the Kiesel Solo Contest won 5th place. I'm super honored as this is an international competition and the other winners are amazing!</p>
+        <div class="videos">
+            <div class="fb-post" data-href="https://www.facebook.com/kieselguitars/posts/2680766358873316" data-width="500" data-show-text="true"><blockquote cite="https://www.facebook.com/kieselguitars/posts/2680766358873316" class="fb-xfbml-parse-ignore"><p>Behold! Our &#039;Kiesel Solo Contest 2020&#039; winners! Congratulations, you all did such a phenomenal job. Thank you to...</p>Posted by <a href="https://www.facebook.com/kieselguitars/">Kiesel Guitars</a> on&nbsp;<a href="https://www.facebook.com/kieselguitars/posts/2680766358873316">Tuesday, June 23, 2020</a></blockquote></div>
+            <p>You can listen to my entry below!</p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/oOCKb6AXN40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        </div>
+        <div class="article">
+            <h2>Virtual Guitar Orchestra</h2>
+            <p>I was super excited to be a part of all 3 Vitrual Guitar Orchestra projects. It was amazing to play these greate new compositions by Sergio Assad and Adam Del Monte as well as appear alongside some of the world's most famous guitarists. The first project, <i>Kaleidokithara</i> was recognized by the Library of Congress for it cultural and social impact during the COVID-19 pandemic.'
+        <div class="videos">
+            <h3>Relampinos - Adam Del Monte</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/SV69EXY_K0o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3>Scient, Safe and Sane - Sergio Assad</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/MXotkK7M1fk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3>Kaleidokithara - Sergio Assad</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nXMOEGl4xSY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="article">
+            <h2>Solo Guitar Videos</h2>
+            <p>Here are few other samples of my classical guitar playing.</p>
+        </div>
+        <div class="videos">
+            <h3>Elegy for a King - Frederic Hand</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/ZcDMbeBJWWg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h3>Invention 9 BWV 780 - J.S. Bach</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/A4AaT4wPJeg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </body>
