added chord diagrams

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="landing-page" class="text-center">
 			<h1>Brian Gaudino</h1>
 			<img src="static/headshot.jpg" id="headshot" class="img-thumbnail" alt="Brian Gaudino">
-			<ul class="nav justify-content-center">
+			<ul id="landing-nav" class="nav justify-content-center">
 				<li class="nav-item">
 					<a class="nav-link" href="music.html">Musician</a>
 				</li>
