--- a/major3rds.html
+++ b/major3rds.html
@@ -14,18 +14,9 @@
     <!--jquery-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     
-    <!--vexflow-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vexflow/3.0.9/vexflow-min.js"></script>
-
     <!--js-->
-    <script src="js/music.js"></script>
-    <script src="js/games.js"></script>
-    <script src="js/draw.js"></script>
-    <script src="js/play.js"></script>
     <script src="js/helper.js"></script>
-    <script src="js/audiosynth.js"></script>
     <script src="js/nav.js"></script>
-
 		<title>Brian Gaudino: Developer</title>
 	</head>
 	<body>
@@ -57,72 +48,74 @@
         </div>
         <div id="mobileTabs"></div>
         <div class="article">
-                  <h1>Why Major Thirds Tuning?</h1>
-    </header>
-    <h3>Advantages</h3>
-    <ul>
-      <li>Learning the locations of notes is easy because the open strings are tuned to only
-        three distinct pitches (E, A♭, and C).</li>
-      <li>Any four fret span contains a complete chromatic scale. As a result, any scale can be played in any position, starting on any finger. No stretches or shifts are needed, even when modulating. This does not mean that shifts are completely eliminated, but that position changes can be made based on musical rather than technical reasons.</li>
-      <li>Because of the symmetrical nature of the tuning, you never have to learn additional fingerings for different string sets. For example, in standard tuning, there are 3 different fingerings for a closed major triad. In major thirds tuning there is only one fingering.</li>
-      <li>Inverting chords in thirds tuning is a simple process. To move a note an octave higher, just play the same fret three strings higher.</li>
-      <li>The smaller interval of the major third makes playing closed voicings of 4-note chords possible. This is what originally drew me to the tuning. Tightly packed voicings that piano players often play are impossible on a standard tuned guitar. In major thirds tuning, all closed inversions of seventh chords are possible, as well as clusters and cross string scales. Open voicings remain very playable as well.
-      </li>
-      <li>
-        Larger chords are possible in thirds tuning without leaving notes out. There are a much larger variety of 5 and 6 note chords possible in major thirds tuning.</li>
-      <li>Both sight-reading and improvisation are easier in major thirds tuning because the location of notes is more logical. It is, in my opinion, more logical than the piano in many ways, because of the absence of black keys. There are no “hard” keys to play in. Everything is equal.</li>
-      <li>If you already play guitar in standard tuning, major thirds tuning forces you to abandon licks and patterns that you may rely on too heavily and think more musically.</li>
-      <li>Symmetrical scales and tonalities, such as whole-tone, augmented, and diminished are much easier. This can lead to fresh ideas that are rarely heard on a standard tuned guitar.</li>
-    </ul>
-    <h3>Disadvantages</h3>
-    <ul>
-      <li>No more “cowboy chords.” Conventional open chord shapes from standard tuning are no longer possible. Some simpler styles of music may be more difficult.</li>
-      <li>There is a reduced range when using six strings. I have remedied this buy playing a seven string guitar.</li>
-      <li>Some guitar music which makes heavy use of open strings will be more difficult in major thirds tuning.</li>
-    </ul>
-  </section>
-  <section id="A_Brief_History" class="main-section">
-    <header>
-      <h1>A Brief History</h2>
-    </header>
-    <p>Major thirds tuning was developed by Ralph Patt in the 1960s. Patt was influenced by the free jazz improvisations of Ornette Coleman and the atonal classical compositions of Arnold Schoenberg. Though chromatic and atonal music inspired him to originally pursue the tuning, he eventually found it to be more useful than standard tuning for commercial music as well.</p>
-  </section>
-  <section id="Tuning_Up" class="main-section">
-    <header>
-      <h1>Tuning Up</h1>
-    </header>
-      <p>Though major thirds tuning can be used on a standard 6-string guitars, the smaller interval will decrease the overall range by 4 semi-tones. This can be overcome by using a 7-string guitar.1 You will probably want to get a custom set of strings and a set-up. I use the following gauges, but feel free to experiment based on your own preference. You can calculate string tension using the <a href="http://www.mcdonaldstrings.com/stringxxiii.html" target="_blank">Mcdonald Patent Universal String Tension Calculator.</a> <a href="https://www.stringsbymail.com/" target="_blank">Strings by Mail</a> is a great place to order individual strings.</p>
-      <ol>
-        <li>E .011</li>
-        <li>C .014</li>
-        <li>A♭ .018</li>
-        <li>E .022</li>
-        <li>C .030</li>
-        <li>A♭ .038</li>
-        <li>E .048</li>
-      </ol>
-      <p>I use seven string guitar diagrams for all the examples in this book, however, most examples will still work on a six string guitar. If you are using a six string, just ignore the 1st string of the diagrams.
-      </p>
-  </section>
-  <section id="Scales" class="main-section">
-    <header>
-      <h1>Scales</h1>
-    </header>
-    <p>In major thirds tuning, any scale can be played in any four fret position. There are four fingerings for any diatonic scale, one starting on each left hand finger. I have used the major scale as an example, but the same principles apply to other scales2 (harmonic minor, melodic minor, etc.) as well.
-      Here are the four fingerings for the major scale.</p>
-    <p>When extending a scale a second octave, the fingering repeats itself three strings higher.</p>
-    <p>A fingering can also be repeated diagonally four frets higher to create 3-octave scales.</p>
-    <p>One of the best features of major thirds tuning is the ability to modulate without changing positions. Improvisors can follow complex chord changes without worrying about how they will transition from one scale to the next.</p>
-    <p>The following figures demonstrate two great ways to practice scales in all 12 keys: chromatically, and counter-clockwise through the circle of fifths. Notice that in both exercises, the same fingerings repeat after every four keys.</p>
-  </section>
-  <section id="Triads" class="main-section">
-    <header>
-      <h1>Triads</h1>
-    </header>
-    <p>Beginning guitarists rarely learn chords in a systematic way. Many guitarists think of chords as shapes or “grips” rather than a collection of notes or intervals.This often results in deficiencies in guitarists' knowledge, technique, and
-      creativity.</p>
-    <p>Thirds tuning makes learning chord construction very simple. Because of the symmetrical nature of the tuning, it is much easier to learn chords based on their intervallic construction. The most common harmonies are built upon major and minor thirds. In thirds tuning, a major third higher can be found on the same fret as any given note on the next highest string. A note a minor third higher can be found one fret lower on the next highest string. The diagram to the right shows a closed root position C major triad (M3+m3).</p>
-    <p>This is the only shape for a closed root position major triad. It can be moved both horizontally and vertically. In standard tuning, you would have to learn 3 different shapes. Finding inversions is also a very simple process in thirds tuning. To invert the triad, simply move the lowest note of the chord up an octave by playing the same fret 3 strings higher. The diagram below shows all inversions of a closed C major triad.</p>
+          <h1>Why Major Thirds Tuning?</h1>
+          <h3>Advantages</h3>
+          <ul>
+            <li>Learning the locations of notes is easy because the open strings are tuned to only
+              three distinct pitches (E, A♭, and C).</li>
+            <li>Any four fret span contains a complete chromatic scale. As a result, any scale can be played in any position, starting on any finger. No stretches or shifts are needed, even when modulating. This does not mean that shifts are completely eliminated, but that position changes can be made based on musical rather than technical reasons.</li>
+            <li>Because of the symmetrical nature of the tuning, you never have to learn additional fingerings for different string sets. For example, in standard tuning, there are 3 different fingerings for a closed major triad. In major thirds tuning there is only one fingering.</li>
+            <li>Inverting chords in thirds tuning is a simple process. To move a note an octave higher, just play the same fret three strings higher.</li>
+            <li>The smaller interval of the major third makes playing closed voicings of 4-note chords possible. This is what originally drew me to the tuning. Tightly packed voicings that piano players often play are impossible on a standard tuned guitar. In major thirds tuning, all closed inversions of seventh chords are possible, as well as clusters and cross string scales. Open voicings remain very playable as well.
+            </li>
+            <li>
+              Larger chords are possible in thirds tuning without leaving notes out. There are a much larger variety of 5 and 6 note chords possible in major thirds tuning.</li>
+            <li>Both sight-reading and improvisation are easier in major thirds tuning because the location of notes is more logical. It is, in my opinion, more logical than the piano in many ways, because of the absence of black keys. There are no “hard” keys to play in. Everything is equal.</li>
+            <li>If you already play guitar in standard tuning, major thirds tuning forces you to abandon licks and patterns that you may rely on too heavily and think more musically.</li>
+            <li>Symmetrical scales and tonalities, such as whole-tone, augmented, and diminished are much easier. This can lead to fresh ideas that are rarely heard on a standard tuned guitar.</li>
+          </ul>
+          <h3>Disadvantages</h3>
+          <ul>
+            <li>No more “cowboy chords.” Conventional open chord shapes from standard tuning are no longer possible. Some simpler styles of music may be more difficult.</li>
+            <li>There is a reduced range when using six strings. I have remedied this buy playing a seven string guitar.</li>
+            <li>Some guitar music which makes heavy use of open strings will be more difficult in major thirds tuning.</li>
+          </ul>
+          <h1>A Brief History</h2>
+          <p>Major thirds tuning was developed by Ralph Patt in the 1960s. Patt was influenced by the free jazz improvisations of Ornette Coleman and the atonal classical compositions of Arnold Schoenberg. Though chromatic and atonal music inspired him to originally pursue the tuning, he eventually found it to be more useful than standard tuning for commercial music as well.</p>
+          <h1>Tuning Up</h1>
+          <p>Though major thirds tuning can be used on a standard 6-string guitars, the smaller interval will decrease the overall range by 4 semi-tones. This can be overcome by using a 7-string guitar.1 You will probably want to get a custom set of strings and a set-up. I use the following gauges, but feel free to experiment based on your own preference. You can calculate string tension using the <a href="http://www.mcdonaldstrings.com/stringxxiii.html" target="_blank">Mcdonald Patent Universal String Tension Calculator.</a> <a href="https://www.stringsbymail.com/" target="_blank">Strings by Mail</a> is a great place to order individual strings.</p>
+          <ol>
+            <li>E .011</li>
+            <li>C .014</li>
+            <li>A♭ .018</li>
+            <li>E .022</li>
+            <li>C .030</li>
+            <li>A♭ .038</li>
+            <li>E .048</li>
+          </ol>
+          <p>I use seven string guitar diagrams for all the examples in this book, however, most examples will still work on a six string guitar. If you are using a six string, just ignore the 1st string of the diagrams.
+          </p>
+          <h1>Scales</h1>
+          <p>In major thirds tuning, any scale can be played in any four fret position. There are four fingerings for any diatonic scale, one starting on each left hand finger. I have used the major scale as an example, but the same principles apply to other scales2 (harmonic minor, melodic minor, etc.) as well.
+            Here are the four fingerings for the major scale.</p>
+          <div class="cropped">
+            <img class="diagram" src="static/m3/m3majorscale1.png" alt="major scale starting on 1st finger">
+          </div>
+          <div class="cropped"> 
+            <img class="diagram" src="static/m3/m3majorscale2.png" alt="major scale starting on 2nd finger">
+          </div>
+          <div class="cropped">
+            <img class="diagram" src="static/m3/m3majorscale3.png" alt="major scale starting on 3rd finger">
+          </div>  
+          <div class="cropped">
+            <img class="diagram" src="static/m3/m3majorscale4.png" alt="major scale starting on 4th finger">
+          </div>
+          <p>When extending a scale a second octave, the fingering repeats itself three strings higher.</p>
+          <p>A fingering can also be repeated diagonally four frets higher to create 3-octave scales.</p>
+          <p>One of the best features of major thirds tuning is the ability to modulate without changing positions. Improvisors can follow complex chord changes without worrying about how they will transition from one scale to the next.</p>
+          <p>The following figures demonstrate two great ways to practice scales in all 12 keys: chromatically, and counter-clockwise through the circle of fifths. Notice that in both exercises, the same fingerings repeat after every four keys.</p>
+          <h1>Triads</h1>
+          <p>Beginning guitarists rarely learn chords in a systematic way. Many guitarists think of chords as shapes or “grips” rather than a collection of notes or intervals.This often results in deficiencies in guitarists' knowledge, technique, and
+            creativity.</p>
+          <p>Thirds tuning makes learning chord construction very simple. Because of the symmetrical nature of the tuning, it is much easier to learn chords based on their intervallic construction. The most common harmonies are built upon major and minor thirds. In thirds tuning, a major third higher can be found on the same fret as any given note on the next highest string. A note a minor third higher can be found one fret lower on the next highest string. The diagram to the right shows a closed root position C major triad (M3+m3).</p>
+          <p>This is the only shape for a closed root position major triad. It can be moved both horizontally and vertically. In standard tuning, you would have to learn 3 different shapes. Finding inversions is also a very simple process in thirds tuning. To invert the triad, simply move the lowest note of the chord up an octave by playing the same fret 3 strings higher. The diagram below shows all inversions of a closed C major triad.</p>
+          <img src="static/m3/m3triads.png" alt="triad fingerins" style="width: 100%;">
+          <h1>Triad Progressions</h1>
+          <p>This chapter demonstrates just a couple of progressions to practice using both open and closed voicings. Using good voice-leading in progressions is easy in thirds tuning.
+The following diagram contains a I IV V I (key of C) in every inversion, first using closed voicings, then using open voicings.</p>
+          <p>The following exercise is a circle progression3 in the key of C, first using closed, then open voicings. I have voiced both progressions so that they share the note in the highest voice.</p>
+          <h1>Seventh Chords</h1>
+          <p>Closed voicings of chords with four or more notes is a very familiar sound in jazz. While these types of chords are easily played on the piano, they are close to impossible to play in standard tuning on guitar. Traditionally, jazz guitarists solve this problem by lowering one or more notes by an octave. While these types of voicings are still possible in thirds tuning, and easy to derive, closed voicings of nearly all 4 note chords are now possible. Inverting 4-note chords is a slightly more complicated process than for triads. Since the third string up from the lowest strings is occupied, the bottom note must be moved 4 frets lower on the next highest string. The following diagram shows all closed- voiced inversions of the most common seventh chords.</p>
         </div>
     </body>
 </html>
