--- a/iterwrite.html
+++ b/iterwrite.html
@@ -3,6 +3,8 @@
 <html lang="en">
 	<head>
 		<title>iter(w)rite</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, width=device-width"> 
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Source+Code+Pro:wght@200&family=Ubuntu+Mono&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -29,14 +31,14 @@
 	</head>
 	<body>
         <div>
-            <h2>the twenty-first-century writing <span id="workshop">workshop</span></h2>
-
-            <h1>iter<span id="w">(w)</span>rite</h1>
+            <h2 class="medium">the twenty-first-century writing <span id="workshop">workshop</span></h2>
+    
+            <h1 class="large">iter<span id="w">(w)</span>rite</h1>
         </div>
         <div>
-            <h3>CEO <a href="mailto:lucydiamondb@yahoo.com">Lucy Biederman</a></h3>
+            <h3 class="centered">CEO <a href="https://lucybiederman.wordpress.com/" target="_blank">Lucy Biederman</a></h3>
             <form>
-                <label for="email">Sign up for updates:</label>
+                <label for="email" class="medium">Sign up for updates:</label>
                 <input name="email" class="form-control" type="email" placeholder="Email">
                 <input class="btn" type="submit">
             </form>
